# demo-pandas-dashboard

./: Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
app/: Dockerfile  Makefile  diagram.py  main.py  pyproject.toml  requirements.txt
app/css/: tailwind.css
app/templates/: index.html
dashboard/: Dockerfile  main.py  requirements.txt
dashboard/templates/: index.html
producer/: .gitignore  Dockerfile  main.py
