[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kavisek <kavi.skhon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
alembic = "^1.8.1"
Jinja2 = "^3.1.2"
uvicorn = "^0.19.0"
redis = "^4.3.4"
Flask = "^2.2.2"
numpy = "^1.23.4"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
